--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
@@ -9,7 +9,7 @@
 
 <form asp-action="Add">
     <div class="form-horizontal">
-        <h4>Portfolio</h4>
+        <h4>Project</h4>
         <hr />
         <div class="form-group">
             <label asp-for="Name" class="col-md-2 control-label"></label>
@@ -26,12 +26,13 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="TagID">Tag</label>
-            <select asp-for="TagID" asp-items="@ViewBag.Tags" class="form-control"></select>
+            <label asp-for="CreatedDate">Tag</label>
+            <input asp-for="CreatedDate" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="ImageUrl">Product Image</label>
-            <input type="file" asp-for="ImageUrl" class="form-control" onchange="previewImage(event)" />
+            <label asp-for="ProjectImageUrl">Product Image</label>
+            <input type="file" asp-for="ProjectImageUrl" class="form-control" onchange="previewImage(event)" />
             <img id="imagePreview" src="" alt="Preview" style="max-width: 200px; height: auto; margin-top: 10px;" />
         </div>
         <script>
