--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Index.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model LTrinhWebNhom3.Models.Project
+﻿@model IEnumerable<LTrinhWebNhom3.Models.Project>
 
 
-<h2>Portfolio</h2>
+<h2>Project</h2>
 
 
 <div class="container mt-4">
@@ -10,24 +10,18 @@
         <div class="col-md-9">
             <!-- Hiển thị sản phẩm bằng dạng dòng sản phẩm sử dụng Bootstrap Row và Col -->
             <div class="row row-cols-1 row-cols-md-3 g-4">
-
-
-                @foreach (var portfolio in Model)
+                @foreach (var project in Model)
                 {
                     <!-- Sản phẩm -->
                     <div class="col">
                         <div class="card">
-                            <img src="@portfolio.ImageUrl" class="card-img-top" alt="..." style="max-height:135px;">
+                            <img src="@project.ProjectImageUrl" class="card-img-top" alt="..." style="max-height:135px;">
                             <div class="card-body">
-                                <h5 class="card-title">Name: <strong>@portfolio.Name</strong></h5>
-                                <p class="card-text">Des: <strong>@portfolio.Description</strong></p>
-                        
-                                <p class="card-text">Cate: <strong>@(portfolio.Tag?.TagName ?? "No tag")</strong></p>
-
-
-                                <a href="/Admin/Portfolio/Display/@(portfolio.Id)" class="btn btn-warning">View</a>
-                                <a href="/Admin/Portfolio/Update/@(portfolio.Id)" class="btn btn-success">Update</a>
-                                <a href="/Admin/Portfolio/Delete/@(portfolio.Id)" class="btn btn-dark">Delete</a>
+                                <h5 class="card-title">Name: <strong>@project.Name</strong></h5>
+                                <p class="card-text">Des: <strong>@project.Description</strong></p>
+                                <a href="/Admin/Project/Display/@(project.Id)" class="btn btn-warning">View</a>
+                                <a href="/Admin/Project/Update/@(project.Id)" class="btn btn-success">Update</a>
+                                <a href="/Admin/Project/Delete/@(project.Id)" class="btn btn-dark">Delete</a>
                             </div>
                         </div>
                     </div>
