--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Update.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Update.cshtml
@@ -19,15 +19,12 @@
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="TagID">Tag</label>
-        <select asp-for="TagID" asp-items="@ViewBag.Tags" class="form-control"></select>
-    </div>
+
 
     <div class="form-group">
 
-        <label asp-for="ImageUrl">Portfolio Image</label>
-        <input type="file" asp-for="ImageUrl" class="form-control" id="imageInput" /> <br />
+        <label asp-for="ProjectImageUrl">Portfolio Image</label>
+        <input type="file" asp-for="ProjectImageUrl" class="form-control" id="imageInput" /> <br />
         <img id="previewImage" style="max-width: 200px; display: none;" alt="Image preview" />
     </div>
     <br />
