--- a/LTrinhWebNhom3/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -94,6 +94,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-danger" href="/Admin/Tag/Add">Add Tag</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/Admin/Views/Project/Add">Add Project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/Admin/Project/Index">List Project</a>
+                            </li>
 
 
                         }
