--- a/LTrinhWebNhom3/Views/Shared/_Layout.cshtml
+++ b/LTrinhWebNhom3/Views/Shared/_Layout.cshtml
@@ -90,6 +90,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-danger" href="/Admin/Tag/Add">Add Tag</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/Areas/Admin/Views/Project/Index.cshtml">Add Project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" href="/Admin/Project">List Project</a>
+                            </li>
 
                         }
                     </ul>
