--- a/LTrinhWebNhom3/Areas/Admin/Views/AspNetUser/Index.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/AspNetUser/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TrinhWebNhom3.Models.ApplicationUser>
+﻿@model IEnumerable<LTrinhWebNhom3.Models.ApplicationUser>
 
 <h1>Users</h1>
 
