--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
@@ -9,7 +9,7 @@
 
 <form asp-action="Add">
     <div class="form-horizontal">
-        <h4>Project</h4>
+        <h4>Portfolio</h4>
         <hr />
         <div class="form-group">
             <label asp-for="Name" class="col-md-2 control-label"></label>
@@ -25,11 +25,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="CreatedDate">Tag</label>
-            <input asp-for="CreatedDate" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
+      
         <div class="form-group">
             <label asp-for="ProjectImageUrl">Product Image</label>
             <input type="file" asp-for="ProjectImageUrl" class="form-control" onchange="previewImage(event)" />
