--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Display.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Display.cshtml
@@ -12,7 +12,7 @@
                 <!-- Sản phẩm -->
                 <div class="col">
                     <div class="card">
-                        <img src="@Model.ImageUrl" class="card-img-top" alt="...">
+                        <img src="@Model.ProjectImageUrl" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">@Model.Description</p>
                    
