--- a/LTrinhWebNhom3/Views/Shared/_Layout.cshtml
+++ b/LTrinhWebNhom3/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                                 <a class="nav-link text-danger" href="/Admin/Tag/Add">Add Tag</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-danger" href="/Admin/Views/Project/Add">Add Project</a>
+                                <a class="nav-link text-danger" href="/Admin/Project/Add">Add Project</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-danger" href="/Admin/Project/Index">List Project</a>
