--- a/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
+++ b/LTrinhWebNhom3/Areas/Admin/Views/Project/Add.cshtml
@@ -7,40 +7,30 @@
 
 <h2>Add Project</h2>
 
-<form asp-action="Add" enctype="multipart/form-data">
-    <div class="form-horizontal">
-        <h4>Project</h4>
-        <hr />
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="ProjectImageUrl">Image</label>
-            <input type="file" asp-for="ProjectImageUrl" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label asp-for="ProjectUrl" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ProjectUrl" class="form-control" />
-                <span asp-validation-for="ProjectUrl" class="text-danger"></span>
-            </div>
-        </div>
-       
-        <button type="submit" class="btn btn-primary mt-3 px-3">Add</button>
+<form asp-action="Add" method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+    
+    <div class="form-group">
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+  
+    <div class="form-group">
+        <label asp-for="ProjectImageUrl">Product Image</label>
+        <input type="file" asp-for="ProjectImageUrl" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="ProjectUrl"></label>
+        <textarea asp-for="ProjectUrl" class="form-control"></textarea>
+        <span asp-validation-for="ProjectUrl" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary mt-3 px-3">Add</button>
 </form>
-
 <script>
     function previewImage(event) {
         var reader = new FileReader();
